# Arepo_Visualizations

./: .gitignore  README.md  pyproject.toml
examples/: bfield_demo.ipynb  bfield_planck_lic_demo.ipynb  lbv_demo.ipynb  surface_density_flythrough_demo.ipynb
simviz/: __init__.py  colormaps.py  field_plots.py  projections.py  spectra.py  utils.py
simviz/styles/: default.mplstyle
