[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "simviz"
version = "0.1.0"
description = "Plotting helpers for Arepo-style simulation snapshots"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "h5py",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["simviz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
